# Substrate-SupplyChain

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.md
node/: Cargo.toml
node-server/: .gitignore  app.js  package-lock.json  package.json
node-server/config/: config.js  passport.js
node-server/constants/: index.js
node-server/controllers/maintain/: index.js
node-server/controllers/v1/: auth.js  index.js  testData.js
node-server/middlewares/: passport.js  passportGuest.js  userRole.js  validator2.js
node-server/migrations/: 20181130223216-create-user.js  20181204225006-create-email-verification.js  20181204225114-create-password-reset.js  20181207222246-create-test-data.js
node-server/models/: emailverification.js  index.js  passwordreset.js  testdata.js  user.js
node-server/schemas/: TestData.js  User.js
node-server/services/: api.js  email.js
node-server/utils/: logger.js  validator2.js
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/assethandler/: Cargo.toml  README.md
pallets/assethandler/src/: lib.rs
pallets/assets/: Cargo.toml
pallets/roles/: README.md
pallets/roles/src/: lib.rs
pallets/template/: Cargo.toml
pallets/wivsupplychain/: Cargo.toml
pallets/wivsupplychain/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
smartcontracts/asset-ntf/: Cargo.toml
smartcontracts/asset-ntf/src/: lib.rs
smartcontracts/token/: Cargo.toml  copyToFe.sh
smartcontracts/token/.ink/abi_gen/: Cargo.toml
smartcontracts/token/src/: lib.rs
