[package]
authors = ['Jonathan@wiv.io']
description = 'FRAME handeling assets'
edition = '2018'
license = 'Unlicense'
name = 'wiv-assethandler'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.rstd]
default-features = false
package = 'sp-std'
version = '2.0.0-alpha.7'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dependencies.sp-std]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dev-dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'

[dev-dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
tag = 'v2.0.0-alpha.7'


[features]
default = ['std']
std = [
    'codec/std',
    'rstd/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-core/std',  
]
