[package]
authors = ['Wiv Technologies <https://www.wiv.io>']
description = 'Wiv Supply Chain Pallet'
edition = '2018'
homepage = 'https://www.wiv.io'
license = 'Unlicense'
name = 'pallet-wivsupplychain'
repository = 'https://github.com/wivtech'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
alt_serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
base64 = { default-features = false, version = '0.13.0', features=["alloc"] }
primitive-types =  { default-features = false, version = '0.7.3'}
rand =  { default-features = false, version = '0.7.3'}
sp-runtime = { default-features = false, version = '2.0.0' }


[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',

]
